--- a/TODO
+++ b/TODO
@@ -15,12 +15,17 @@ Function:
     _ getManagerEnCours (ok)
     _ getDepartmentEmployee (ok)
     _ getEmployee (ok)
+    _ getDepartment (ok)
+    _getCountDepartmentEmployee (ok)
+    _getAge (ok)
 
 
 Task:
     _ Show all departement (ok)
     _ display cards flex (ok)
     _ show current manager (ok)
-    _ links to employee list (wip)
+    _ links to employee list (ok)
+    _ show all employee (ok)
+    _ show per segment (ok)
 
     
