--- a/TODO
+++ b/TODO
@@ -36,7 +36,7 @@ Task:
     _ search form (ok)
     _ search result (ok)
         - first 20 result(ok)
-        - next and previous button(ok)
+        - nav button(ok)
     _ show nbr employee in index (ok)
     _ show job stats
     _ show longest job in historique_employee
