Improve department change feedback and UI details
Added user feedback for department change success or failure on the employee profile page. Updated department change logic to return status codes, and improved department info display with additional date details. Enhanced navigation in the footer and made minor code formatting improvements.

--- a/TODO
+++ b/TODO
@@ -20,8 +20,6 @@ Function:
     _ countEmployeeInPosition(ok)
     _ getJobAverageSalary(ok)
     _ getLongestHeldPosition (ok)
-    _ 
-
 
 Task:
     _ Show all departement (ok)
@@ -45,13 +43,11 @@ Task:
         - current department (ok)
         - form with date, and list department excluding the current one (ok)
     _ form validation page
-        - start date must be higher or equals the current department start date
-        - update dept_emp with the new value if valid
-        - show an error message if invalid
+        - start date must be higher or equals the current department start date (ok)
+        - update dept_emp with the new value if valid (ok)
+        - show an error message if invalid (ok)
+
     _ button to be a manager in fiche employee
         - validate data
-        - update dept_manager if valid
+        - update dept_manager if valid 
         - show an error message if invalid
-        
-
-    
