Add manager assignment form and improve employee page
Introduces a new page (assign_manager.php) with a form to assign an employee as a department manager, displaying both the employee and current manager's info. Updates fiche_employee.php to show current department, add a button to assign manager role, and display relevant status/error messages. Refactors and improves function.php for better code style, adds getEmployeeCurrentTitle, and enhances department/manager queries.

--- a/TODO
+++ b/TODO
@@ -48,6 +48,11 @@ Task:
         - show an error message if invalid (ok)
 
     _ button to be a manager in fiche employee
+        - adding the button (ok)
         - validate data
-        - update dept_manager if valid 
-        - show an error message if invalid
+            - make a form to choose a starting date
+            - make sure the date is after the starting date of the current manager
+            - update dept_manager if valid 
+        - show status message
+            - error message if invalid date
+            - success message if valid date and successfully updated
